--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,9 @@
         <div class="row justify-content-center mb-3">
             <div class="col-auto text-center"><h1>CDL Wordle</h1></div>
             <div class="col-auto align-content-center" id="help"><i class="fa-solid fa-circle-question"></i></div>
+            <div>
+                <h5>The OpTic boys played my game!! --> <a href="https://youtube.com/clip/UgkxgLHsd2f14g35gSeoT9eXtQBMG5oVIDap?si=9qLjXrok55QR9KtH">Clip</a></h5>
+            </div>
         </div>
 
         <!-- Search Label -->
@@ -287,7 +290,7 @@
         <p style="font-weight: bold">Created by <a href="https://buymeacoffee.com/dizzzz">Diz</a>
       </div>
       <div class="col-sm-6">
-        <p style="font-weight: bold"><a href="https://discord.gg/bqCHQaU9vn">Report a bug</a></p>
+        <p style="font-weight: bold"><a href="https://discord.gg/GNMUjWSmmy">Feedback</a></p>
       </div>
     </footer>
 
