--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CDL Worlde</title>
+    <title>CDL Wordle</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for icons -->
@@ -273,7 +273,7 @@
                       <h3>How to play</h3>
                       <p style="text-align: justify">Guess a CDL player by typing into the search bar and selecting a player from the dropdown list, and then click Guess. Incorrect guesses will be shown in the table. If any of the information for the player that you guessed matches the mystery player, it will be highlighted green. The squares at the top will contain any known information about the mystery player.</p>
                       <h3>Which players are included?</h3>
-                      <p style="text-align: justify">Only players who have played in the CDL era are included, but wins and rings from before the CDL are counted. Substitutes are included and count as teammates, but coaches do not.</p>
+                      <p style="text-align: justify">Only players who have played in the CDL era are included, but wins and rings from before the CDL are counted. Teammates are CDL only. Substitutes are included and count as teammates, but coaches do not.</p>
                       <h3>Problems and Feedback</h3>
                       <p style="text-align: justify">Feel free to use the links at the bottom of the page to report any feedback, bugs, or issues with the data. Gathering data for this game was not easy and there are probably some flaws.</p>
                       <p style="text-align: justify">Special thanks to the <a href="https://cod-esports.fandom.com/wiki/Call_of_Duty_Esports_Wiki" target="_blank">COD Esports Wiki</a> which is the source for most of the data.</p>
