--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,7 @@
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSHNWWQN0C"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7152769611869897"
-     crossorigin="anonymous"></script>
-    <script>
+    <meta name="google-adsense-account" content="ca-pub-7152769611869897">
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
