--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSHNWWQN0C"></script>
-    <meta name="google-adsense-account" content="ca-pub-7152769611869897">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7152769611869897"
+     crossorigin="anonymous"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
