--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,8 @@
                         <h2 id="correctModalName"style="color: green"></h2>
                         <p>You got it in <span id="guessCountModal"></span> tries. Come back tomorrow for a new game.</p>
                         <h4 class="mt-4">Today's Game Global Stats</h4>
-                        <p> Total players today: <span id="totalPlayers"></span></p>
+                        <p class="mb-0"> Total players today: <span id="totalPlayers"></span></p>
+                        <p> Today's average score: <span id="meanGuesses"></span> guesses</p>
                         <canvas id="globalChart" width="400" height="200"></canvas>
                         <h4 class="mt-4">Your History</h4>
                         <canvas id="guessesChart" width="400" height="200"></canvas>
