--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <script src="https://kit.fontawesome.com/a6e9d4678d.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7152769611869897"
+     crossorigin="anonymous">
+    </script>
     <style>
         /* Ensure the body and html stretch to the full height of the viewport */
         html, body {
