--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7152769611869897"
      crossorigin="anonymous">
     </script>
+    <script src="https://kulroakonsu.net/88/tag.min.js" data-zone="129123" async data-cfasync="false"></script>
     <style>
         /* Ensure the body and html stretch to the full height of the viewport */
         html, body {
