--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,17 @@
                 </div>
                 <div class="dropdown-menu w-100" id="playerDropdown"></div>
             </div>
+
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '96e4b5235c868164a0b7105d6f33ac98',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/96e4b5235c868164a0b7105d6f33ac98/invoke.js"></script>
         </div>
 
         <h3 class="d-none mt-3" id="correctMessage">You guessed <span id="mysteryName"></span> in <span class="guessCount"></span> tries</h3>
