--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,14 @@
             white-space: nowrap;
             text-overflow: ellipsis
         }
+
+        .ad-container {
+            display: flex;
+            justify-content: center;  /* Centers horizontally */
+            align-items: center;      /* Centers vertically (optional) */
+            width: 100%;
+            height: 60px; /* Adjust height if needed */
+        }
     </style>
 </head>
 <body class="bg-dark">
@@ -172,17 +180,6 @@
                 </div>
                 <div class="dropdown-menu w-100" id="playerDropdown"></div>
             </div>
-
-            <script type="text/javascript">
-                atOptions = {
-                    'key' : '96e4b5235c868164a0b7105d6f33ac98',
-                    'format' : 'iframe',
-                    'height' : 60,
-                    'width' : 468,
-                    'params' : {}
-                };
-            </script>
-            <script type="text/javascript" src="//www.highperformanceformat.com/96e4b5235c868164a0b7105d6f33ac98/invoke.js"></script>
         </div>
 
         <h3 class="d-none mt-3" id="correctMessage">You guessed <span id="mysteryName"></span> in <span class="guessCount"></span> tries</h3>
@@ -326,6 +323,19 @@
         <p style="font-weight: bold"><a href="https://discord.gg/GNMUjWSmmy">Feedback</a></p>
       </div>
     </footer>
+
+    <div class="ad-container">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '96e4b5235c868164a0b7105d6f33ac98',
+                'format' : 'iframe',
+                'height' : 60,
+                'width' : 468,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/96e4b5235c868164a0b7105d6f33ac98/invoke.js"></script>
+    </div>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
