--- a/public/index.html
+++ b/public/index.html
@@ -182,6 +182,11 @@
             </div>
         </div>
 
+        <div class="ad-container">
+            <script async="async" data-cfasync="false" src="//pl25754399.profitablecpmrate.com/f1cbf935f62f0989a40d14d71f98135d/invoke.js"></script>
+            <div id="container-f1cbf935f62f0989a40d14d71f98135d"></div>
+        </div>
+
         <h3 class="d-none mt-3" id="correctMessage">You guessed <span id="mysteryName"></span> in <span class="guessCount"></span> tries</h3>
         <h3 class="d-none mt-3" id="giveUpMessage">You gave up. The answer was <span id="mysteryNameGiveUp"></span></h3>
 
