--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,20 @@
             </div>
         </div>
 
+        <div class="ad-container">
+            <p><span style="color: white; font-size: small;">Advertisement</span></p>
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '96e4b5235c868164a0b7105d6f33ac98',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/96e4b5235c868164a0b7105d6f33ac98/invoke.js"></script>
+        </div>
+
         <!-- Guess section -->
         <div class="row mt-4">
             <div class="col">
@@ -328,19 +342,6 @@
         <p style="font-weight: bold"><a href="https://discord.gg/GNMUjWSmmy">Feedback</a></p>
       </div>
     </footer>
-
-    <div class="ad-container">
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '96e4b5235c868164a0b7105d6f33ac98',
-                'format' : 'iframe',
-                'height' : 60,
-                'width' : 468,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/96e4b5235c868164a0b7105d6f33ac98/invoke.js"></script>
-    </div>
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
