--- a/public/index.html
+++ b/public/index.html
@@ -233,9 +233,17 @@
         </div>
 
         <div class="ad-container">
-            <p><span style="color: white; font-size: small;">Advertisement</span></p>
-            <script async="async" data-cfasync="false" src="//pl25754399.profitablecpmrate.com/f1cbf935f62f0989a40d14d71f98135d/invoke.js"></script>
-            <div id="container-f1cbf935f62f0989a40d14d71f98135d"></div>
+            <!-- <p><span style="color: white; font-size: small;">Advertisement</span></p> -->
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '96e4b5235c868164a0b7105d6f33ac98',
+                    'format' : 'iframe',
+                    'height' : 60,
+                    'width' : 468,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/96e4b5235c868164a0b7105d6f33ac98/invoke.js"></script>
         </div>
 
         <!-- Guess section -->
