--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
             </div>
         </div>
 
-        <div class="ad-container">
+        <div class="ad-container mt-1">
             <!-- <p><span style="color: white; font-size: small;">Advertisement</span></p> -->
             <script type="text/javascript">
                 atOptions = {
