--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-7152769611869897">
+    <meta name="ezoic-site-verification" content="Qsa1982rrucz8zw10HgjrKt4GObzVJ" />
     <title>CDL Wordle</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
