--- a/public/index.html
+++ b/public/index.html
@@ -320,6 +320,7 @@
                   <!-- Modal Body -->
                   <div class="modal-body">
                       <p>Guess the CDL player (changes each day at midnight PST)</p>
+                      <p>This site is not affiliated with the Call of Duty League or Activision.</p>
                       <h3>How to play</h3>
                       <p style="text-align: justify">Guess a CDL player by typing into the search bar and selecting a player from the dropdown list, and then click Guess. Incorrect guesses will be shown in the table. If any of the information for the player that you guessed matches the mystery player, it will be highlighted green. The squares at the top will contain any known information about the mystery player. After 8 incorrect guesses, you may give up and see the answer. If you give up, the game will not count towards your personal or global stats.</p>
                       <h3>Which players are included?</h3>
@@ -336,11 +337,14 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 row">
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <p style="font-weight: bold">Created by <a href="https://buymeacoffee.com/dizzzz">Diz</a>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <p style="font-weight: bold"><a href="https://discord.gg/GNMUjWSmmy">Feedback</a></p>
+      </div>
+      <div class="col-sm-4">
+        <p style="font-weight: bold"><a href="/privacy-policy">Privacy Policy</a></p>
       </div>
     </footer>
 
