--- a/public/index.html
+++ b/public/index.html
@@ -161,10 +161,11 @@
     <!-- Main Container -->
     <div class="container text-light text-center content">
         <!-- Title Row -->
-        <div class="row justify-content-center mb-3">
+        <div class="row justify-content-center mb-2">
             <div class="col-auto text-center"><h1>CDL Wordle</h1></div>
             <div class="col-auto align-content-center" id="help"><i class="fa-solid fa-circle-question"></i></div>
         </div>
+        <button class="row btn d-none mb-2" style="background-color: green; color: white" id="unlimitedBtn">Start Unlimited</button>
 
         <!-- Search Label -->
         <div class="row">
@@ -182,7 +183,6 @@
                 <div class="dropdown-menu w-100" id="playerDropdown"></div>
             </div>
         </div>
-
         <div class="ad-container mt-3">
             <!-- <p><span style="color: white; font-size: small;">Advertisement</span></p> -->
             <script type="text/javascript">
@@ -281,6 +281,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content bg-dark text-light">
                     <div class="modal-body">
+                        <button type="button" class="btn-close btn-close-white position-absolute end-0 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
                         <h2 class="mt-2">The mystery player was:</h2>
                         <h2 id="correctModalName"style="color: green"></h2>
                         <p id="successGuessCount" class="d-none">You got it in <span id="guessCountModal"></span> tries. Come back tomorrow for a new game.</p>
@@ -332,6 +333,23 @@
               </div>
           </div>
       </div>
+
+      <!-- Infinite results modal -->
+        <div class="modal fade" id="infiniteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content bg-dark text-light">
+                    <div class="modal-body">
+                        <h2 class="mt-2">The mystery player was:</h2>
+                        <h2 id="infiniteModalName"style="color: green"></h2>
+                        <p id="infiniteGuessCount">You got it in <span id="guessCountInfiniteModal"></span> tries.</p>
+                        <p id="giveUpInfiniteGuessCount">You gave up after <span id="giveUpInfiniteGuessCountModal"></span> guesses.</p>
+                        <h4 class="mb-0">Average for this player: <span id="meanInfiniteGuesses" style="font-weight: bold; color: green"></span> guesses</h4>
+                        <h4>Give up percentage: <span id="globalGiveUpsInfinite" style="font-weight: bold;">0</span><span style="font-weight: bold;">%</span></h4>
+                        <button class="btn" id="newUnlimitedBtn" style="background-color: green; color: white" data-bs-dismiss="modal">New Game</button>                   
+                    </div>
+                </div>
+            </div>
+        </div>
       
     </div>
 
