--- a/public/index.html
+++ b/public/index.html
@@ -359,7 +359,8 @@
         <p style="font-weight: bold">Created by <a href="https://buymeacoffee.com/dizzzz">Diz</a>
       </div>
       <div class="col-sm-4">
-        <p style="font-weight: bold"><a href="https://discord.gg/GNMUjWSmmy">Feedback</a></p>
+        <a class="me-2" href="https://x.com/d1zzzz_" style="color: inherit"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://discord.gg/GNMUjWSmmy" style="color: inherit"><i class="fa-brands fa-discord"></i></a>
       </div>
       <div class="col-sm-4">
         <p style="font-weight: bold"><a href="/privacy-policy">Privacy Policy</a></p>
