--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,16 @@
             width: 100%;
             height: 60px; /* Adjust height if needed */
         }
+
+        .social-icon {
+            font-size: 1.5rem;
+            color: inherit;
+            transition: color 0.2s ease-in-out
+        }
+
+        .social-icon:hover {
+            color: #666
+        }
     </style>
 </head>
 <body class="bg-dark">
@@ -359,8 +369,8 @@
         <p style="font-weight: bold">Created by <a href="https://buymeacoffee.com/dizzzz">Diz</a>
       </div>
       <div class="col-sm-4">
-        <a class="me-2" href="https://x.com/d1zzzz_" style="color: inherit"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://discord.gg/GNMUjWSmmy" style="color: inherit"><i class="fa-brands fa-discord"></i></a>
+        <a class="me-2" href="https://x.com/d1zzzz_" style="color: inherit"><i class="fa-brands social-icon fa-x-twitter"></i></a>
+        <a class="ms-2" href="https://discord.gg/GNMUjWSmmy" style="color: inherit"><i class="fa-brands social-icon fa-discord"></i></a>
       </div>
       <div class="col-sm-4">
         <p style="font-weight: bold"><a href="/privacy-policy">Privacy Policy</a></p>
