making links new tab

--- a/public/index.html
+++ b/public/index.html
@@ -407,9 +407,9 @@
                         <h4>Feedback</h4>
                         <p style="text-align: justify">I am pretty much finished with all the major plans I had for the game. If you have any ideas that you would like to see implemented, find any bugs, or have any other feedback, you can reach out to me via discord or twitter (links at the bottom of the site). I hope you enjoy and thank you very much for playing.</p>
                         <p>Diz</p>
-                        <a class="me-2" href="https://x.com/d1zzzz_" style="color: inherit"><i class="fa-brands social-icon fa-x-twitter"></i></a>
-                        <a class="ms-2 me-2" href="https://discord.gg/GNMUjWSmmy" style="color: inherit"><i class="fa-brands social-icon fa-discord"></i></a>
-                        <a class="ms-2" href="https://buymeacoffee.com/dizzzz" style="color: inherit"><i class="fa-solid social-icon fa-hand-holding-dollar"></i></a>
+                        <a class="me-2" href="https://x.com/d1zzzz_" target="_blank" style="color: inherit"><i class="fa-brands social-icon fa-x-twitter"></i></a>
+                        <a class="ms-2 me-2" href="https://discord.gg/GNMUjWSmmy" target="_blank" style="color: inherit"><i class="fa-brands social-icon fa-discord"></i></a>
+                        <a class="ms-2" href="https://buymeacoffee.com/dizzzz" target="_blank" style="color: inherit"><i class="fa-solid social-icon fa-hand-holding-dollar"></i></a>
                     </div>
                 </div>
             </div>
@@ -420,11 +420,11 @@
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 row">
       <div class="col-sm-4">
-        <p style="font-weight: bold">Created by <a href="https://buymeacoffee.com/dizzzz">Diz</a>
+        <p style="font-weight: bold">Created by <a href="https://buymeacoffee.com/dizzzz" target="_blank">Diz</a>
       </div>
       <div class="col-sm-4">
-        <a class="me-2" href="https://x.com/d1zzzz_" style="color: inherit"><i class="fa-brands social-icon fa-x-twitter"></i></a>
-        <a class="ms-2" href="https://discord.gg/GNMUjWSmmy" style="color: inherit"><i class="fa-brands social-icon fa-discord"></i></a>
+        <a class="me-2" href="https://x.com/d1zzzz_" target="_blank" style="color: inherit"><i class="fa-brands social-icon fa-x-twitter"></i></a>
+        <a class="ms-2" href="https://discord.gg/GNMUjWSmmy" target="_blank" style="color: inherit"><i class="fa-brands social-icon fa-discord"></i></a>
       </div>
       <div class="col-sm-4">
         <p style="font-weight: bold"><a href="/privacy-policy">Privacy Policy</a></p>
