--- a/public/index.html
+++ b/public/index.html
@@ -171,6 +171,7 @@
             <div class="col-auto text-center align-content-center" id="news"><i class="fa-regular fa-newspaper"></i></div>
             <div class="col-auto text-center"><h1>CDL Wordle</h1></div>
             <div class="col-auto align-content-center" id="help"><i class="fa-solid fa-circle-question"></i></div>
+            <div class="col-auto align-content-center" id="gridlock"><i class="fa-solid fa-table-cells"></i></div>
         </div>
         <button class="row btn d-none mb-2" style="background-color: green; color: white" id="unlimitedBtn">Start Unlimited</button>
 
