removing comments and updating modals

--- a/public/index.html
+++ b/public/index.html
@@ -274,7 +274,8 @@
                         <button type="button" class="btn-close btn-close-white position-absolute end-0 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
                         <h2 class="mt-2">The mystery player was:</h2>
                         <h2 id="correctModalName"style="color: green"></h2>
-                        <p id="successGuessCount" class="d-none">You got it in <span id="guessCountModal"></span> tries. Come back tomorrow for a new game.</p>
+                        <p id="successGuessCount" class="d-none">You got it in <span id="guessCountModal"></span> tries.</p>
+                        <a href="/gridlock" class="btn btn-primary"><span>Make sure you try CDL Gridlock too!</span></a>
                         <p id="giveUpGuessCount" class="d-none">You gave up after <span id="giveUpGuessCountModal"></span> guesses. Come back tomorrow for a new game.</p>
                         <div class="row justify-content-center mt-3">
                             <div class="col-auto">
@@ -359,32 +360,25 @@
                 <div class="modal-content bg-dark text-light border-0">
                     <!-- Modal Header -->
                     <div class="modal-header justify-content-center border-0">
-                        <h2 class="modal-title">What's New?</h2>
+                        <h2 class="modal-title">Announcement!</h2>
                         <button type="button" class="btn-close btn-close-white position-absolute end-0 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
         
                     <!-- Modal Body -->
                     <div class="modal-body text-justify">
-                        <p style="text-align: justify">With the game becoming more popular, I've implemented several features over the last couple of weeks to improve the experience:</p>
+                        <p style="text-align: justify">Introducing <a href="/gridlock">CDL Gridlock</a> – a fresh and challenging twist on CDL Wordle!</p>
                         <ul>
                             <li style="text-align: justify">
-                                Added unlimited mode. After you complete the daily game, you can click the 'Start Unlimited' button to keep playing. Each game is completely random and you can give up if you need to. If you want to exit unlimited mode you can reload the page.
+                                Fill each square with a player that satisfies both row and column criteria.
                             </li>
                             <li style="text-align: justify">
-                                Added sharing. In the results popup that shows after completing the daily game, there is a link to share your results. You can copy them to paste anywhere or you can click the X link to open up a new tweet with the results.
+                                10 guesses per game.
                             </li>
                             <li style="text-align: justify">
-                                Added additional statistics to the results popup.
-                            </li>
-                            <li style="text-align: justify">
-                                Added a give up button available for the daily game after you have made 8 guesses, and always available in unlimited mode
-                            </li>
-                            <li style="text-align: justify">
-                                A bunch of other small bug fixes
+                                Unique puzzles every day!
                             </li>
                         </ul>
-                        <h4>Feedback</h4>
-                        <p style="text-align: justify">I am pretty much finished with all the major plans I had for the game. If you have any ideas that you would like to see implemented, find any bugs, or have any other feedback, you can reach out to me via discord or twitter (links at the bottom of the site). I hope you enjoy and thank you very much for playing.</p>
+                        <p style="text-align: justify">Give it a try and as always, please reach out to me with any feedback or ideas.</p>
                         <p>Diz</p>
                         <a class="me-2" href="https://x.com/d1zzzz_" target="_blank" style="color: inherit"><i class="fa-brands social-icon fa-x-twitter"></i></a>
                         <a class="ms-2 me-2" href="https://discord.gg/GNMUjWSmmy" target="_blank" style="color: inherit"><i class="fa-brands social-icon fa-discord"></i></a>
