adding message under title

--- a/public/gridlock.html
+++ b/public/gridlock.html
@@ -246,6 +246,9 @@
             <div class="col-auto text-center"><h1>CDL Gridlock</h1></div>
             <div class="col-auto align-content-center" id="help"><i class="fa-solid fa-circle-question"></i></div>
         </div>
+        <div class="row">
+            <p>Use your guesses wisely! Once you make a correct guess, you won't be able to use that player for any other square on the grid.</p>
+        </div>
 
         <div class="grid-table">
             <div class="row">
