--- a/public/gridlock.html
+++ b/public/gridlock.html
@@ -243,7 +243,7 @@
         <!-- Title Row -->
         <div class="row justify-content-center mb-2">
             <div class="col-auto text-center align-content-center" id="returnToWordle"><i class="fa-solid fa-rotate-left"></i></div>
-            <div class="col-auto text-center"><h1>CDL Gridlock</h1></div>
+            <div class="col-auto text-center"><h1>Games have moved to Breaking Point!</h1></div>
             <div class="col-auto align-content-center" id="help"><i class="fa-solid fa-circle-question"></i></div>
         </div>
         <div class="row">
