--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
         <!-- Title Row -->
         <div class="row justify-content-center mb-2">
             <div class="col-auto text-center align-content-center" id="news"><i class="fa-regular fa-newspaper"></i></div>
-            <div class="col-auto text-center"><h1>CDL Wordle</h1></div>
+            <div class="col-auto text-center"><h1>Games have moved to Breaking Point!</h1></div>
             <div class="col-auto align-content-center" id="help"><i class="fa-solid fa-circle-question"></i></div>
             <div class="col-auto align-content-center" id="gridlock"><i class="fa-solid fa-table-cells"></i></div>
         </div>
